ec2-sg-template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Build a webapp stack with CloudFormation:
  This example creates an Amazon EC2 instance running the AmazonLinux2 AMI and a security group that allows HTTP/HTTPS and SSH inbound and outbound traffic.'

Parameters:

  mykeypair:
    Type: AWS::EC2::KeyPair::KeyName
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.
  VolSize:
    Type: Number
    Description: Specify the size of the volume
    Default: 8
    MaxValue: 20
    MinValue: 8
  SecurityGroupIP:
    Type: String
    Default: 0.0.0.0/0
    Description: Enter your IP to give you SSH access.

Resources:

  WebAppInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0ccea833bf267252a 
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref mykeypair
      BlockDeviceMappings:
        - DeviceName: /dev/sdm
          Ebs:
            VolumeSize: !Ref VolSize
            VolumeType: gp3
            DeleteOnTermination: true     
      SecurityGroups:
        - !Ref WebAppSecurityGroup
      UserData:
        Fn::Base64: |
            #!/bin/bash

            apt update
            apt install apache2 -y
            systemctl start apache2
            systemctl enable apache2

  WebAppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata: # To Fix F1000 cfn nag error
      cfn_nag:
        rules_to_suppress:
          - id: F1000
            reason: "Using Default VPC, so cant specify vpcid, can only specify egress in non default vpc"
    Properties:
      GroupDescription: 'Allow HTTP/HTTPS and SSH inbound and outbound traffic'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SecurityGroupIP
